# optional26

./: .clang-format  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
etc/: ci-clang-toolchain.cmake  gcc-toolchain.cmake  llvm-16-toolchain.cmake  llvm-master-toolchain.cmake  llvm-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt
src/beman/optional26/tests/: CMakeLists.txt
